checkboxes. overflow. bugs

--- a/client/styles/app.css
+++ b/client/styles/app.css
@@ -10,6 +10,11 @@
   height: 100%;
 }
 */
+
+html {
+  overflow: hidden;
+}
+
 blockquote {
   margin: 15px 0 0 0;
 }
